feat: graph_rag integration
